Add jbang header. Run with e.g. jbang Llama2.java stories15M.bin .